typescript-compiler/src/ts/generated/TypescriptXParser.ts
// Generated from ./TypescriptX.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import TypescriptXListener from "./TypescriptXListener.js";
import TypescriptXVisitor from "./TypescriptXVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class TypescriptXParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly ID = 45;
	public static readonly NUMERIC = 46;
	public static readonly IDNUMERIC = 47;
	public static readonly WS = 48;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_fileDeclaration = 0;
	public static readonly RULE_input = 1;
	public static readonly RULE_stringLiteral = 2;
	public static readonly RULE_importStatement = 3;
	public static readonly RULE_htmlBlock = 4;
	public static readonly RULE_attribute = 5;
	public static readonly RULE_varDeclaration = 6;
	public static readonly RULE_varType = 7;
	public static readonly RULE_type = 8;
	public static readonly RULE_typeAnnotation = 9;
	public static readonly RULE_initialiser = 10;
	public static readonly RULE_classInitialiser = 11;
	public static readonly RULE_arrayType = 12;
	public static readonly RULE_objectType = 13;
	public static readonly RULE_mathExpression = 14;
	public static readonly RULE_mathOperator = 15;
	public static readonly RULE_quickMath = 16;
	public static readonly RULE_quickMathOperator = 17;
	public static readonly RULE_statement = 18;
	public static readonly RULE_block = 19;
	public static readonly RULE_functionDeclaration = 20;
	public static readonly RULE_parameters = 21;
	public static readonly RULE_accessModifier = 22;
	public static readonly RULE_functionCallStatement = 23;
	public static readonly RULE_functionCall = 24;
	public static readonly RULE_arguments = 25;
	public static readonly RULE_argument = 26;
	public static readonly RULE_ifStatement = 27;
	public static readonly RULE_condition = 28;
	public static readonly RULE_conditionalOperator = 29;
	public static readonly RULE_loopStatement = 30;
	public static readonly RULE_asyncCall = 31;
	public static readonly literalNames: (string | null)[] = [ null, "'\"'", 
                                                            "'''", "'gebruikt'", 
                                                            "'uit'", "';'", 
                                                            "'<'", "'>'", 
                                                            "'</'", "'='", 
                                                            "'globaal'", 
                                                            "'elast'", "'vast'", 
                                                            "'getal'", "'tekst'", 
                                                            "'boolean'", 
                                                            "'void'", "':'", 
                                                            "'new'", "'[]'", 
                                                            "'{'", "','", 
                                                            "'}'", "'+'", 
                                                            "'-'", "'*'", 
                                                            "'/'", "'%'", 
                                                            "'++'", "'--'", 
                                                            "'async'", "'functie'", 
                                                            "'('", "')'", 
                                                            "'public'", 
                                                            "'private'", 
                                                            "'protected'", 
                                                            "'.'", "'als('", 
                                                            "'==='", "'=='", 
                                                            "'>='", "'<='", 
                                                            "'toerke('", 
                                                            "'await'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, "ID", 
                                                             "NUMERIC", 
                                                             "IDNUMERIC", 
                                                             "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"fileDeclaration", "input", "stringLiteral", "importStatement", "htmlBlock", 
		"attribute", "varDeclaration", "varType", "type", "typeAnnotation", "initialiser", 
		"classInitialiser", "arrayType", "objectType", "mathExpression", "mathOperator", 
		"quickMath", "quickMathOperator", "statement", "block", "functionDeclaration", 
		"parameters", "accessModifier", "functionCallStatement", "functionCall", 
		"arguments", "argument", "ifStatement", "condition", "conditionalOperator", 
		"loopStatement", "asyncCall",
	];
	public get grammarFileName(): string { return "TypescriptX.g4"; }
	public get literalNames(): (string | null)[] { return TypescriptXParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return TypescriptXParser.symbolicNames; }
	public get ruleNames(): string[] { return TypescriptXParser.ruleNames; }
	public get serializedATN(): number[] { return TypescriptXParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, TypescriptXParser._ATN, TypescriptXParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public fileDeclaration(): FileDeclarationContext {
		let localctx: FileDeclarationContext = new FileDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, TypescriptXParser.RULE_fileDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 67;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 3222281224) !== 0) || ((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & 1987) !== 0)) {
				{
				{
				this.state = 64;
				this.statement();
				}
				}
				this.state = 69;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public input(): InputContext {
		let localctx: InputContext = new InputContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, TypescriptXParser.RULE_input);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 70;
			_la = this._input.LA(1);
			if(!(((((_la - 45)) & ~0x1F) === 0 && ((1 << (_la - 45)) & 7) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public stringLiteral(): StringLiteralContext {
		let localctx: StringLiteralContext = new StringLiteralContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, TypescriptXParser.RULE_stringLiteral);
		try {
			this.state = 80;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				{
				this.state = 72;
				this.match(TypescriptXParser.T__0);
				this.state = 73;
				this.input();
				this.state = 74;
				this.match(TypescriptXParser.T__0);
				}
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				{
				this.state = 76;
				this.match(TypescriptXParser.T__1);
				this.state = 77;
				this.input();
				this.state = 78;
				this.match(TypescriptXParser.T__1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public importStatement(): ImportStatementContext {
		let localctx: ImportStatementContext = new ImportStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, TypescriptXParser.RULE_importStatement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 82;
			this.match(TypescriptXParser.T__2);
			this.state = 83;
			this.input();
			this.state = 84;
			this.match(TypescriptXParser.T__3);
			this.state = 85;
			this.stringLiteral();
			this.state = 86;
			this.match(TypescriptXParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public htmlBlock(): HtmlBlockContext {
		let localctx: HtmlBlockContext = new HtmlBlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, TypescriptXParser.RULE_htmlBlock);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 88;
			this.match(TypescriptXParser.T__5);
			this.state = 89;
			this.input();
			this.state = 93;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 45)) & ~0x1F) === 0 && ((1 << (_la - 45)) & 7) !== 0)) {
				{
				{
				this.state = 90;
				this.attribute();
				}
				}
				this.state = 95;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 96;
			this.match(TypescriptXParser.T__6);
			this.state = 101;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===6 || ((((_la - 45)) & ~0x1F) === 0 && ((1 << (_la - 45)) & 7) !== 0)) {
				{
				this.state = 99;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 45:
				case 46:
				case 47:
					{
					this.state = 97;
					this.input();
					}
					break;
				case 6:
					{
					this.state = 98;
					this.htmlBlock();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 103;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 104;
			this.match(TypescriptXParser.T__7);
			this.state = 105;
			this.input();
			this.state = 106;
			this.match(TypescriptXParser.T__6);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public attribute(): AttributeContext {
		let localctx: AttributeContext = new AttributeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, TypescriptXParser.RULE_attribute);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 108;
			this.input();
			this.state = 109;
			this.match(TypescriptXParser.T__8);
			this.state = 110;
			this.match(TypescriptXParser.T__0);
			this.state = 113;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				{
				this.state = 111;
				this.functionCall();
				}
				break;
			case 2:
				{
				this.state = 112;
				this.input();
				}
				break;
			}
			this.state = 115;
			this.match(TypescriptXParser.T__0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public varDeclaration(): VarDeclarationContext {
		let localctx: VarDeclarationContext = new VarDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, TypescriptXParser.RULE_varDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 118;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 7168) !== 0)) {
				{
				this.state = 117;
				this.varType();
				}
			}

			this.state = 120;
			this.match(TypescriptXParser.ID);
			this.state = 122;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===17) {
				{
				this.state = 121;
				this.typeAnnotation();
				}
			}

			this.state = 125;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===9) {
				{
				this.state = 124;
				this.initialiser();
				}
			}

			this.state = 127;
			this.match(TypescriptXParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public varType(): VarTypeContext {
		let localctx: VarTypeContext = new VarTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, TypescriptXParser.RULE_varType);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 129;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 7168) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public type_(): TypeContext {
		let localctx: TypeContext = new TypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, TypescriptXParser.RULE_type);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 131;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 122880) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public typeAnnotation(): TypeAnnotationContext {
		let localctx: TypeAnnotationContext = new TypeAnnotationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, TypescriptXParser.RULE_typeAnnotation);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 133;
			this.match(TypescriptXParser.T__16);
			this.state = 134;
			this.type_();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public initialiser(): InitialiserContext {
		let localctx: InitialiserContext = new InitialiserContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, TypescriptXParser.RULE_initialiser);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 136;
			this.match(TypescriptXParser.T__8);
			this.state = 143;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				{
				this.state = 137;
				this.input();
				}
				break;
			case 2:
				{
				this.state = 138;
				this.stringLiteral();
				}
				break;
			case 3:
				{
				this.state = 139;
				this.htmlBlock();
				}
				break;
			case 4:
				{
				this.state = 140;
				this.functionCallStatement();
				}
				break;
			case 5:
				{
				this.state = 141;
				this.classInitialiser();
				}
				break;
			case 6:
				{
				this.state = 142;
				this.mathExpression();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public classInitialiser(): ClassInitialiserContext {
		let localctx: ClassInitialiserContext = new ClassInitialiserContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, TypescriptXParser.RULE_classInitialiser);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 145;
			this.match(TypescriptXParser.T__17);
			this.state = 148;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				{
				this.state = 146;
				this.functionCall();
				}
				break;
			case 2:
				{
				this.state = 147;
				this.functionCallStatement();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public arrayType(): ArrayTypeContext {
		let localctx: ArrayTypeContext = new ArrayTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, TypescriptXParser.RULE_arrayType);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 150;
			this.type_();
			this.state = 151;
			this.match(TypescriptXParser.T__18);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public objectType(): ObjectTypeContext {
		let localctx: ObjectTypeContext = new ObjectTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, TypescriptXParser.RULE_objectType);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 153;
			this.match(TypescriptXParser.T__19);
			this.state = 166;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===45) {
				{
				this.state = 154;
				this.match(TypescriptXParser.ID);
				this.state = 155;
				this.match(TypescriptXParser.T__16);
				this.state = 156;
				this.type_();
				this.state = 163;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===21) {
					{
					{
					this.state = 157;
					this.match(TypescriptXParser.T__20);
					this.state = 158;
					this.match(TypescriptXParser.ID);
					this.state = 159;
					this.match(TypescriptXParser.T__16);
					this.state = 160;
					this.type_();
					}
					}
					this.state = 165;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 168;
			this.match(TypescriptXParser.T__21);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public mathExpression(): MathExpressionContext {
		let localctx: MathExpressionContext = new MathExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, TypescriptXParser.RULE_mathExpression);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 170;
			this.input();
			this.state = 171;
			this.mathOperator();
			this.state = 174;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 45:
			case 46:
			case 47:
				{
				this.state = 172;
				this.input();
				}
				break;
			case 1:
			case 2:
				{
				this.state = 173;
				this.stringLiteral();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public mathOperator(): MathOperatorContext {
		let localctx: MathOperatorContext = new MathOperatorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, TypescriptXParser.RULE_mathOperator);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 176;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 260046848) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public quickMath(): QuickMathContext {
		let localctx: QuickMathContext = new QuickMathContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, TypescriptXParser.RULE_quickMath);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 178;
			this.input();
			this.state = 179;
			this.quickMathOperator();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public quickMathOperator(): QuickMathOperatorContext {
		let localctx: QuickMathOperatorContext = new QuickMathOperatorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, TypescriptXParser.RULE_quickMathOperator);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 181;
			_la = this._input.LA(1);
			if(!(_la===28 || _la===29)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 36, TypescriptXParser.RULE_statement);
		try {
			this.state = 192;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 14, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 183;
				this.varDeclaration();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 184;
				this.block();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 185;
				this.functionCallStatement();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 186;
				this.importStatement();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 187;
				this.ifStatement();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 188;
				this.functionDeclaration();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 189;
				this.functionCall();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 190;
				this.loopStatement();
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 9);
				{
				this.state = 191;
				this.asyncCall();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let localctx: BlockContext = new BlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 38, TypescriptXParser.RULE_block);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 194;
			this.match(TypescriptXParser.T__19);
			this.state = 198;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 3222281224) !== 0) || ((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & 1987) !== 0)) {
				{
				{
				this.state = 195;
				this.statement();
				}
				}
				this.state = 200;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 201;
			this.match(TypescriptXParser.T__21);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public functionDeclaration(): FunctionDeclarationContext {
		let localctx: FunctionDeclarationContext = new FunctionDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 40, TypescriptXParser.RULE_functionDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 204;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===30) {
				{
				this.state = 203;
				this.match(TypescriptXParser.T__29);
				}
			}

			this.state = 206;
			this.match(TypescriptXParser.T__30);
			this.state = 207;
			this.match(TypescriptXParser.ID);
			this.state = 208;
			this.match(TypescriptXParser.T__31);
			this.state = 210;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 7168) !== 0) || _la===45) {
				{
				this.state = 209;
				this.parameters();
				}
			}

			this.state = 212;
			this.match(TypescriptXParser.T__32);
			this.state = 214;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===17) {
				{
				this.state = 213;
				this.typeAnnotation();
				}
			}
